--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+a,
+button,
+input,
+textarea {
+  -webkit-tap-highlight-color: transparent;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
